# orbiq_system_monitor

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build-and-package.sh  build-releases.sh  package-deb.sh
config/: orbiq_system_monitor.toml  temp_daemon.toml
debian/: orbiq_system_monitor.service  postinst  temp_daemon.service
src/: config.rs  fan_sensors.rs  homeassistant.rs  hwmon_devices.rs  main.rs  mqtt_client.rs  sensors.rs  system_sensor.rs  temperature_sensor.rs
