[package]
name = "orbiq_system_monitor"
version = "0.1.37"
edition = "2024"
description = "A lightweight system monitoring daemon with MQTT and Home Assistant support"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.35.2"
serde_json = "1.0.140"

[package.metadata.deb]
maintainer = "Volker Pacher <volker.pacher@gmail.com>"
license-file = ["LICENSE"]
depends = ["libc6 (>= 2.17)"]
assets = [
    ["target/release/orbiq_system_monitor", "usr/bin/", "755"],
    ["config/orbiq_system_monitor.toml", "etc/orbiq_system_monitor/config.toml", "644"]
]
maintainer-scripts = "debian"

[package.metadata.deb.systemd-units]
unit-scripts = "debian"
enable = false
start = false